@@ -22,6 +22,8 @@ See the end for copying conditions.
 ** libgnutls: gnutls_privkey_sign_hash2 now accepts the GNUTLS_PRIVKEY_SIGN_FLAG_TLS1_RSA
    flag as documented. This makes it a complete replacement of gnutls_privkey_sign_hash().
 
+** libgnutls: Added support for Generalname registeredID.
+
 ** The priority configuration was enhanced to allow more elaborate
    system-wide configuration of the library (#587).
    The following changes were included:
@@ -55,6 +57,7 @@ gnutls_hmac_copy: Added
 GNUTLS_MAC_AES_GMAC_128: Added
 GNUTLS_MAC_AES_GMAC_192: Added
 GNUTLS_MAC_AES_CMAC_256: Added
+GNUTLS_SAN_REGISTERED_ID: Added
 
 
 * Version 3.6.8 (released 2019-05-28)
